--- a/One.WebUI/Properties/launchSettings.json
+++ b/One.WebUI/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:65138",
-      "sslPort": 44398
+      "applicationUrl": "http://localhost:5978",
+      "sslPort": 44307
     }
   },
   "profiles": {
@@ -18,6 +18,7 @@
     },
     "One.WebUI": {
       "commandName": "Project",
+      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
